--- a/src/webapp/WEB-INF/pages/startPage.html
+++ b/src/webapp/WEB-INF/pages/startPage.html
@@ -3,24 +3,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>All Users</title>
 </head>
 <body>
+
+<a href="/new">Create new user</a>
+<hr/>
+
+
 <div>
     <td>
         <table border="2">
             <thead>
             <tr>
-                <th>Model</th>
-                <th>Series</th>
-                <th>Year</th>
+                <th>Name</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="msg : ${message}">
-                <td th:text="${msg.model}"></td>
-                <td th:text="${msg.series}"></td>
-                <td th:text="${msg.year}"></td>
+            <tr th:each="user : ${users}">
+                <td><a th:href="@{/{id}(id=${user.getId()})}"
+                       th:text="${user.getName() + ', ' + user.getLastName()}">user </a></td>
             </tr>
             </tbody>
         </table>
